--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^7.12.0",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@twa-dev/sdk": "^7.8.0",
     "@types/node": "^22.0.0",
+    "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "react": "^18.3.1",
